/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.util.file.checksum;

option java_package = "com.google.devtools.mobileharness.shared.util.file.checksum.proto";
option java_outer_classname = "ChecksumProto";

// The checksum algorithm. You need to specify the storage API as prefix of
// the enum name because different storage APIs might use variants of the same
// checksum algorithm.
enum Algorithm {
  ALGORITHM_UNSPECIFIED = 0;
  GCS_CRC32C = 1;
  GCS_MD5 = 2;
  ATS_FILE_SERVER_SHA256 = 3;
}

message Checksum {
  // REQUIRED. The checksum algorithm of the file.
  Algorithm algorithm = 1;
  // REQUIRED. The checksum value of the file.
  bytes data = 2;
}
